ocp4/blue-ingress-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: blue-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/server-snippets: |
      add_header x-nginx-ingress $hostname;
spec:
  tls:
    - hosts:
      - blue.ingress.dc1.example.com
      # This assumes tls-secret exists and the SSL 
      # certificate contains a CN for foo.bar.com
      secretName: tls-secret
  rules:
  - host: blue.ingress.dc1.example.com
    http:
      paths:
      - backend:
          serviceName: node-blue
          servicePort: 80
